Add .scalafmt.conf file.

--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -24,7 +24,11 @@ play {
     }
 
     hosts {
-      allowed = ["localhost:9443", "localhost:9000"]
+      allowed = [
+        "localhost", // For test purpose
+        "localhost:9443",
+        "localhost:9000"
+      ]
     }
 
     hsts {
