Add missing database configuration.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,8 +1,18 @@
 # https://www.playframework.com/documentation/latest/Configuration
 include "secure"
 
+application.name =shijianji
+
 # db connections = ((physical_core_count * 2) + effective_spindle_count)
 fixedConnectionPool = 5
+
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
+
+slick.dbs.default.profile= "utils.MyPostgresProfile$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost/shijianji_play"
+slick.dbs.default.db.user=postgres
+slick.dbs.default.db.password=postgres
 
 repository.dispatcher {
   executor = "thread-pool-executor"
