--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -11,7 +11,10 @@ play {
     flash.httpOnly = true
 
     forwarded.trustedProxies = ["::1", "127.0.0.1"]
-  }
+
+    # Only used in local development server
+    secret.key = "!@LS0+VAmEk:')plV(Nk1ld8>X?X08X`cI'K'ZUqI-v1O{+XK56zt[l[t5"
+    }
 
   i18n {
     langCookieSecure = true
@@ -25,7 +28,7 @@ play {
 
     hosts {
       allowed = [
-        "localhost", // For test purpose
+        "localhost", # For test purpose
         "localhost:9443",
         "localhost:9000"
       ]
