Fix travis job.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ language: scala
 scala:
   - 2.13.1
 before_script:
-  - psql -c 'create database shijianji_play;' -U postgres
+  - psql -c 'create database shijianji_play_test;' -U postgres
