Add slick module to config.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,15 @@ application.name =shijianji
 # db connections = ((physical_core_count * 2) + effective_spindle_count)
 fixedConnectionPool = 5
 
-play.http.errorHandler = play.api.http.HtmlOrJsonHttpErrorHandler
+play {
+  http {
+    errorHandler = play.api.http.HtmlOrJsonHttpErrorHandler
+  }
+
+  modules {
+    enabled += "play.api.db.slick.SlickModule"
+  }
+}
 
 slick.dbs.default.profile= "utils.MyPostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
