Add some settings for authenticator

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,3 +30,25 @@ repository.dispatcher {
     fixed-pool-size = ${fixedConnectionPool}
   }
 }
+
+silhouette {
+  authenticator {
+    cookieName="authenticator"
+    cookiePath="/"
+    secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+    httpOnlyCookie=true
+    useFingerprinting=false
+    authenticatorIdleTimeout=30 minutes
+    authenticatorExpiry=12 hours
+
+    crypter {
+      key = "[changeme]" // A unique encryption key
+    }
+
+    rememberMe {
+      cookieMaxAge=30 days
+      authenticatorIdleTimeout=5 days
+      authenticatorExpiry=30 days
+    }
+  }
+}
