Add more boilerplates to support password authentication

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -41,9 +41,8 @@ silhouette {
     authenticatorIdleTimeout=30 minutes
     authenticatorExpiry=12 hours
 
-    crypter {
-      key = "[changeme]" // A unique encryption key
-    }
+    crypter.key = "[changeme]" // A unique encryption key
+    signer.key = "[changeme]" // A unique encryption key
 
     rememberMe {
       cookieMaxAge=30 days
