--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,11 @@ application.name =shijianji
 fixedConnectionPool = 5
 
 play {
+  evolutions {
+    autoApply = true
+    autoApplyDowns = true
+  }
+
   http {
     errorHandler = play.api.http.HtmlOrJsonHttpErrorHandler
   }
