Add react server host for development

--- a/conf/secure.conf
+++ b/conf/secure.conf
@@ -26,11 +26,14 @@ play {
       cookie.secure = true
     }
 
+    enabled += "play.filters.cors.CORSFilter"
+
     hosts {
       allowed = [
         "localhost", # For test purpose
+        "localhost:3000",
+        "localhost:9000",
         "localhost:9443",
-        "localhost:9000"
       ]
     }
 
