Change cookie name

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,8 @@ repository.dispatcher {
 
 silhouette {
   authenticator {
-    cookieName="authenticator"
-    cookiePath="/"
+    cookieName = "shijianji"
+    cookiePath = "/"
     secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
     httpOnlyCookie=true
     useFingerprinting=false
