--- a/conf/application.test.conf
+++ b/conf/application.test.conf
@@ -1,3 +1,4 @@
 include "application.conf"
 
-slick.dbs.default.db.url="jdbc:postgresql://localhost/shijianji_play_test"
+//slick.dbs.default.db.url="jdbc:postgresql://localhost/shijianji_play_test"
+slick.dbs.default.db.url = "jdbc:h2:mem:play;MODE=PostgreSQL"
