Switch to BearerTokenAuthenticator

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,13 +38,19 @@ repository.dispatcher {
 
 silhouette {
   authenticator {
+    JWT {
+      sharedSecret = "THIS-IS-A-TEST-SECRET"
+    }
+    token {
+      fieldName = "X-Auth-Token"
+      authenticatorIdleTimeout=30 minutes
+      authenticatorExpiry=12 hours
+    }
     cookieName = "shijianji"
     cookiePath = "/"
     secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
     httpOnlyCookie=true
     useFingerprinting=false
-    authenticatorIdleTimeout=30 minutes
-    authenticatorExpiry=12 hours
 
     crypter.key = "[changeme]" // A unique encryption key
     signer.key = "[changeme]" // A unique encryption key
